# graphics-assignment-2

./: CMakeLists.txt  README.md
Frameworks/SFML.framework/Versions/2.6.0/Headers/Audio/: Music.hpp
Frameworks/SFML.framework/Versions/Current/Headers/Audio/: InputSoundFile.hpp
include/SFML/Audio/: OutputSoundFile.hpp
src/: AnimatingValue.cpp  AnimatingValue.h  Camera.cpp  Camera.h  CollisionBox.cpp  CollisionBox.h  Fence.cpp  Fence.h  FerrisWheel.cpp  FerrisWheel.h  Game.cpp  Game.h  GameObject.cpp  GameObject.h  GameOverScene.cpp  GameOverScene.h  GameScene.cpp  GameScene.h  GameSettings.cpp  GameSettings.h  GameTimer.cpp  GameTimer.h  GameWin.h  GameWinScene.cpp  GameWinScene.h  Goal.cpp  Goal.h  Ground.cpp  Ground.h  Lamp.cpp  Lamp.h  MainScene.cpp  MainScene.h  Player.cpp  Player.h  Roller.cpp  Roller.h  Score.cpp  Score.h  Seesaw.cpp  (+10 more)
